# cookiecutter-forge

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  mkdocs.yaml  pyproject.toml
{{cookiecutter.project_name}}/conf/: config.yaml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: train.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/datapipeline/: steps.py
