[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
packages = [
    { include = "cookiecutter.project_slug" },
]

[tool.poetry.dependencies]
python = "^3.11"

numpy = "^1.20.1"
pandas = "^1.2.2"
ruff = "^0.3.7"
mkdocs = "^1.5.3"
pre-commit = "^3.7.0"

model-forge = {git = "https://github.com/BartvanWoesik/model-forge.git"}
visualisation-forge = {git = "https://github.com/BartvanWoesik/visualisation-forge.git"}